# crusty

./: Cargo.toml  Dockerfile  compose.yaml
.scripts/: migration.sh  wait.sh
migrations/2024-05-24-160130_create-users/: up.sql
migrations/2024-05-24-160159_add-root-user-to-users/: up.sql
src/: database.rs  lib.rs  main.rs  schema.rs
src/user/: builder.rs  crud.rs  mod.rs  model.rs
