[package]
name = "crusty"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
uuid = "1.8.0"
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
log = "^0.4"
tokio-postgres = "^0.7"
tokio-postgres-migration = "^0.1"
diesel_migrations = "2.1.0"